[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Traps/SpikedBall/SpikedBall.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Traps/SpikedBall/trap_chain.png" type="Texture" id=2]
[ext_resource path="res://src/Traps/Pendulum/Pendulum.gd" type="Script" id=3]

[node name="Pendulum" type="Node2D"]
script = ExtResource( 3 )

[node name="Chain" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 32, 0 )

[node name="SpikedBall" parent="." instance=ExtResource( 1 )]
position = Vector2( 56, 0 )

[node name="Tween" type="Tween" parent="."]

[node name="PauseTimer" type="Timer" parent="."]

[node name="MinAngle" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 66, 0 )
width = 4.0
default_color = Color( 0.898039, 0, 1, 1 )

[node name="MaxAngle" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 66, 0 )
width = 4.0
default_color = Color( 0.898039, 0, 1, 1 )
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="PauseTimer" to="." method="_on_PauseTimer_timeout"]
